--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -750,22 +750,22 @@ save_plot("selection/single-pop/bench/moms_++_vs_py_pi2.pdf", p10, base_height=1
 
 ## Simple BGS model
 
+### Building Demes files
+
 Here we model BGS experienced by a single neutral locus
 at the edge of a chromosome with w selected sites of length l
 
-### Building Demes files
-
 ```{r, demes-BGS-single, include=F, eval=T, results=F, message=F, warning=F}
 
-N <- c(10000)
-u <- c(1e-8)
+N <- c(2500, 10000)
+u <- c(1e-8, 1e-7, 1e-6)
 r <- c(0, 1e-6, 2e-6, 5e-6, 1e-5, 2e-5, 5e-5, 1e-4, 2e-4, 5e-4, 1e-3)
-s <- c(-1e-3, -5e-4, -1e-4)
+s <- c(-1e-3, -5e-4, -2e-4, -1e-4, -5e-5, -2e-5, -1e-5)
 
 # number of independent genomic windows, each corresponding to a two-locus system
 w <- c(1, 100)
 # length of each constrained locus
-l <- c(1, 10, 100, 1000, 10000)
+l <- c(1, 10)
 
 params <- crossing(N, u, r, s, w, l)
 params$pi0 <- 2 * params$N * params$u
@@ -873,7 +873,7 @@ for(i in 1:n_models) {
   hr_BGS[i] <- pi0 * factors[i]
   hk95[i] <- pi0 * prod(hudson_kaplan_95)
     
-  factors_tbl[i,] <- one_minus_f
+  factors_tbl[i,] <- one_minus_f # stores to later plot relative reduction in diversity
 }
 
 params$factors <- factors
@@ -881,7 +881,7 @@ params$momentspp <- hr_BGS
 params$hk95 <- hk95
 
 # visualizing the accuracy of the approximation ul = L * u for the left locus
-tbl <- filter(params, w==1, r>0)
+tbl <- filter(params, N==10000, w==1, r>0) # looking at single N to simplify
 
 tbl$ul <- tbl$u * tbl$l
 x <- filter(tbl, l==1)["factors"]
@@ -942,7 +942,7 @@ bgs_plot <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1
 save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_scaling.pdf", bgs_plot, base_height=12, base_width=16)
 
 # plots of moments++
-df <- filter(params, w==100)
+df <- filter(params, w==100, u==1e-8)
 c <- 1
 plot_list <- list(length=length(unique(df$l)))
 for(i in unique(df$l)) {
@@ -953,7 +953,7 @@ for(i in unique(df$l)) {
   p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
   
   if(c==1) {
-    p <- p + labs(title="Hr moments++, rows = L, cols = r", x="s", y=expression(H[r]))
+    p <- p + labs(title="Hr moments++, rows = uL, cols = r", x="s", y=expression(H[r]))
     p <- p + theme(axis.title=element_text(size=16), 
                    axis.text=element_text(size=12), 
                    strip.text.x=element_text(size=16), 
@@ -984,8 +984,8 @@ for(i in unique(df$l)) {
   c <- c + 1
 }
 
-bgs_plot <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_1.pdf", bgs_plot, base_height=12, base_width=16)
+bgs_plot_1 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_1.pdf", bgs_plot_1, base_height=12, base_width=16)
 
 c <- 1
 plot_list <- list(length=length(unique(df$l)))
@@ -997,7 +997,7 @@ for(i in unique(df$l)) {
   p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) sprintf("%.3f", x))
   
   if(c==1) {
-    p <- p + labs(title="Two-locus Reduction Factors BGS, rows = u, cols = r", x="s", y=expression(H[r]))
+    p <- p + labs(title="Two-locus Reduction Factors BGS, rows = uL, cols = r", x="s", y=expression(H[r]))
     p <- p + theme(axis.title=element_text(size=16), 
                    axis.text=element_text(size=12), 
                    strip.text.x=element_text(size=16), 
@@ -1042,7 +1042,7 @@ for(i in unique(params$u)) {
   p <- p + geom_point(size=1) + facet_grid(N~r) + theme_bw()
   p <- p + scale_x_discrete(breaks=pretty_breaks())
   p <- p + scale_y_continuous(breaks=pretty_breaks())
-  p <- p + labs(title=paste("Two-locus Hr BGS windows, mu", i, ", cols = r", sep=""), x="Window", y=expression(1-f[j]))
+  p <- p + labs(title=paste("Two-locus Hr BGS windows, mu", i, ", cols = r, rows = N", sep=""), x="Window", y=expression(1-f[j]))
   p <- p + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
@@ -1059,12 +1059,12 @@ plot_list <- list(length=length(unique(df$l)))
 for(i in unique(df$l)) {
   p <- ggplot(data=filter(df, l==i), aes(x=s, y=hk95, color=as.factor(N)))
   p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
-  p <- p + geom_hline(data=filter(molten_windows, u==i), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+  p <- p + geom_hline(data=filter(df, u==i), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
   p <- p + scale_x_continuous(breaks=pretty_breaks())
   p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
   
   if(c==1) {
-    p <- p + labs(title="Hr HK95, rows = ul, cols = r", x="s", y=expression(H[r]))
+    p <- p + labs(title="Hr HK95, rows = ul, cols = r", x="s", y="HK95")
     p <- p + theme(axis.title=element_text(size=16), 
                    axis.text=element_text(size=12), 
                    strip.text.x=element_text(size=16), 
@@ -1095,8 +1095,111 @@ for(i in unique(df$l)) {
   c <- c + 1
 }
 
-bgs_plot <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_hk95_1.pdf", bgs_plot, base_height=12, base_width=16)
+bgs_plot_3 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_hk95_1.pdf", bgs_plot_3, base_height=12, base_width=16)
+
+# compare moments++ and HK95
+for(i in unique(df$N)) {
+  
+  df2 <- pivot_longer(filter(df, i==N), cols=c("momentspp", "hk95"), names_to="method")
+  c <- 1
+  plot_list <- list(length=length(unique(df2$l)))
+  
+  for(j in unique(df$l)) {
+    p <- ggplot(data=filter(df2, l==j), aes(x=s, y=value, shape=method))
+    p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+    p <- p + geom_hline(data=filter(df2, u==j), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+    p <- p + scale_shape_manual(values=c(0, 1))
+    p <- p + scale_x_continuous(breaks=pretty_breaks())
+    p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+  
+    if(c==1) {
+      p <- p + labs(title="Hr methods, rows = ul, cols = r", x="s", y="HK95")
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_text(size=16), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    } else if(c==length(unique(params$l))) {
+      p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16),
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                     legend.text=element_text(size=16), 
+                     legend.position="bottom")
+    } else {
+      p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    }
+  
+    plot_list[[c]] <- p
+    c <- c + 1
+  }
+  
+  bgs_plot_4 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+  save_plot(paste("selection/single-pop/simple_bgs/bgs_mpp_hk95_N_", i, ".pdf", sep=""), bgs_plot_4, base_height=12, base_width=16)
+}
+
+# checking the relationship between the s and the relevant width of BGS (~r)
+df3 <- distinct(dplyr::select(filter(molten_windows, w==1, r>0), -window))
+
+p <- ggplot(data=filter(df3, l==1), aes(x=r, y=value, color=as.factor(s), shape=as.factor(u)))
+p <- p + geom_line() + geom_point(size=3) + facet_wrap(~N, nrow=2) + theme_bw()
+p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
+p <- p + scale_shape_manual(values=c(0, 1))
+p <- p + scale_x_log10(breaks=unique(df3$r))
+p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+p <- p + labs(title="Diversity Reduction Factors, L=1", x="r", y=expression(1-f[j]))
+p <- p + theme(axis.title=element_text(size=12),
+               axis.text=element_text(size=10),
+               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+save_plot("selection/single-pop/simple_bgs/s_vs_r_A.pdf", p, base_height=9, base_width=12)
+
+df4 <- filter(molten_windows, w==100, r==1e-5)
+df4$rec <- df4$r * df4$window
+df4$cum_red <- cumprod(df4$value)
+
+p <- ggplot(data=filter(df4, l==1), aes(x=rec, y=value, color=as.factor(s), linetype=as.factor(u)))
+p <- p + geom_line() + facet_wrap(~N, nrow=2) 
+p <- p + theme(panel.grid.major=element_blank(), panel.grid.minor=element_blank(),
+               panel.background=element_blank(), axis.line=element_line(colour="black"))
+p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
+p <- p + scale_shape_manual(values=c(0, 1))
+p <- p + scale_x_continuous(breaks=unique(df4$rec))
+p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+p <- p + labs(title="Diversity Reduction Factors, L=1", x="cum. rec. rate.", y=expression(1-f[j]))
+p <- p + theme(axis.title=element_text(size=12),
+               axis.text=element_text(size=10),
+               axis.text.x=element_blank(),
+               axis.ticks.x=element_blank(),
+               legend.position="bottom")
+save_plot("selection/single-pop/simple_bgs/s_vs_r_B.pdf", p, base_height=9, base_width=12)
+
+p <- ggplot(data=filter(df4, l==1), aes(x=rec, y=cum_red, color=as.factor(s), linetype=as.factor(u)))
+p <- p + geom_line() + facet_wrap(~N, nrow=2) 
+p <- p + theme(panel.grid.major=element_blank(), panel.grid.minor=element_blank(),
+               panel.background=element_blank(), axis.line=element_line(colour="black"))
+p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
+p <- p + scale_shape_manual(values=c(0, 1))
+p <- p + scale_x_continuous(breaks=unique(df4$rec))
+p <- p + scale_y_continuous(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+p <- p + labs(title="Diversity Reduction Factors", x="cum. rec. rate.", y="cum. red.")
+p <- p + theme(axis.title=element_text(size=12),
+               axis.text=element_text(size=10),
+               axis.text.x=element_blank(),
+               axis.ticks.x=element_blank(),
+               legend.position="bottom")
+save_plot("selection/single-pop/simple_bgs/s_vs_r_C.pdf", p, base_height=9, base_width=12)
 ```
 
 ### Building Demes files
@@ -1104,7 +1207,7 @@ save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_hk95_1.pdf", bgs_p
 We now model multiple neutral loci, interdigitated with 
 constrained, non-recombining loci of length l
 
-```{r, demes-BGS-mult-1, include=F, eval=T, results=F, message=F, warning=F}
+```{r, demes-BGS-mult-1, include=F, eval=F, results=F, message=F, warning=F}
 
 N <- 10000
 u <- c(1e-7, 1e-8, 1e-9)
@@ -1127,7 +1230,7 @@ write.csv(params, "selection/single-pop/simple_bgs/mult_neutral/params.csv", quo
 Sys.setenv(n_models=n_models)
 ```
 
-```{bash mk-mult-dirs, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash mk-mult-dirs, engine.opts='-i', include=F, eval=F, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -1142,7 +1245,7 @@ done
 cd ../../../..
 ```
 
-```{r, demes-BGS-mult-2, include=F, eval=T, results=F, message=F, warning=F}
+```{r, demes-BGS-mult-2, include=F, eval=F, results=F, message=F, warning=F}
 
 for(i in 1:n_models) {
   
@@ -1196,7 +1299,7 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++BGS-mult, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash run-moments++BGS-mult, engine.opts='-i', include=F, eval=F, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -1217,7 +1320,7 @@ cd ../../../..
 
 ### Plots
 
-```{r, plots-BGS-mult, include=T, eval=T, results=F, message=F, warning=F}
+```{r, plots-BGS-mult, include=T, eval=F, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/simple_bgs/mult_neutral/params.csv", sep=",", header=T)
 n_models <- nrow(params)
