--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -765,7 +765,7 @@ s <- c(-1e-3, -5e-4, -2e-4, -1e-4, -5e-5, -2e-5, -1e-5)
 # number of independent genomic windows, each corresponding to a two-locus system
 w <- c(1, 100)
 # length of each constrained locus
-l <- c(1, 10)
+l <- c(1, 10, 100, 1000)
 
 params <- crossing(N, u, r, s, w, l)
 params$pi0 <- 2 * params$N * params$u
@@ -893,13 +893,13 @@ for(i in 1:(nrow(tbl) / length(unique(tbl$l)))) {
 }
 tbl$scaled_factors <- y
 tbl$scaled_hr <- tbl$scaled_factors * tbl$pi0
-
+tbl$ratio <- tbl$momentspp / tbl$scaled_hr
 molten_tbl <- pivot_longer(tbl, cols=c("momentspp", "scaled_hr"), names_to="method")
 
 c <- 1
-plot_list <- list(length=length(unique(molten_tbl$ul)))
-for(i in unique(molten_tbl$ul)) {
-  p <- ggplot(data=filter(molten_tbl, ul==i), aes(x=r, y=1e+4*value, shape=method))
+plot_list <- list(length=length(unique(molten_tbl$l)))
+for(i in unique(molten_tbl$l)) {
+  p <- ggplot(data=filter(molten_tbl, l==i, u==1e-8), aes(x=r, y=1e+4*value, shape=method))
   p <- p + geom_line() + geom_point(size=3) + facet_wrap(~s, nrow=1) + theme_bw()
   p <- p + geom_hline(data=filter(molten_tbl, ul==i), aes(yintercept=1e+4*pi0), linetype="dashed")
   p <- p + scale_shape_manual(values=c(0, 1))
@@ -915,7 +915,7 @@ for(i in unique(molten_tbl$ul)) {
                    axis.text.x=element_blank(),
                    axis.ticks.x=element_blank(),
                    legend.position="none")
-  } else if(c==length(unique(molten_tbl$ul))) {
+  } else if(c==length(unique(molten_tbl$l))) {
     p <- p + labs(title=NULL, x="r", y=expression(H[r]))
     p <- p + theme(axis.title=element_text(size=16),
                    axis.text=element_text(size=12), 
@@ -938,22 +938,21 @@ for(i in unique(molten_tbl$ul)) {
   c <- c + 1
 }
 
-bgs_plot <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_scaling.pdf", bgs_plot, base_height=12, base_width=16)
+bgs_plot_1 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1, 1.1))
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_scaling_1.pdf", bgs_plot_1, base_height=12, base_width=16)
 
-# plots of moments++
-df <- filter(params, w==100, u==1e-8)
 c <- 1
-plot_list <- list(length=length(unique(df$l)))
-for(i in unique(df$l)) {
-  p <- ggplot(data=filter(df, l==i), aes(x=s, y=momentspp, color=as.factor(N)))
-  p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
-  p <- p + geom_hline(data=filter(df, u==i), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
-  p <- p + scale_x_continuous(breaks=pretty_breaks())
-  p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+plot_list <- list(length=length(unique(tbl$l)))
+tbl2 <- filter(tbl, l>1, u==1e-8)
+for(i in unique(tbl2$l)) {
+  p <- ggplot(data=filter(tbl2, l==i), aes(x=r, y=ratio, shape=as.factor(alpha)))
+  p <- p + geom_line() + geom_point(size=3) + theme_bw()
+  p <- p + scale_shape_manual(values=1:length(unique(tbl2$alpha)))
+  p <- p + scale_x_log10(breaks=unique(tbl2$r))
+  p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) sprintf("%.4f", x))
   
   if(c==1) {
-    p <- p + labs(title="Hr moments++, rows = uL, cols = r", x="s", y=expression(H[r]))
+    p <- p + labs(title="Hr / scaled_hr, L = 10", x="r", y="Ratio")
     p <- p + theme(axis.title=element_text(size=16), 
                    axis.text=element_text(size=12), 
                    strip.text.x=element_text(size=16), 
@@ -961,8 +960,8 @@ for(i in unique(df$l)) {
                    axis.text.x=element_blank(),
                    axis.ticks.x=element_blank(),
                    legend.position="none")
-  } else if(c==length(unique(df$l))) {
-    p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+  } else if(c==length(unique(tbl2$l))) {
+    p <- p + labs(title=NULL, x="r", y="Ratio")
     p <- p + theme(axis.title=element_text(size=16),
                    axis.text=element_text(size=12), 
                    strip.text.x=element_blank(), 
@@ -970,7 +969,7 @@ for(i in unique(df$l)) {
                    legend.text=element_text(size=16), 
                    legend.position="bottom")
   } else {
-    p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+    p <- p + labs(title=NULL, x="r", y="Ratio")
     p <- p + theme(axis.title=element_text(size=16), 
                    axis.text=element_text(size=12), 
                    strip.text.x=element_blank(), 
@@ -984,8 +983,59 @@ for(i in unique(df$l)) {
   c <- c + 1
 }
 
-bgs_plot_1 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_1.pdf", bgs_plot_1, base_height=12, base_width=16)
+bgs_plot_2 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1, 1.1))
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_scaling_2.pdf", bgs_plot_2, base_height=12, base_width=16)
+
+# plots of moments++
+df <- filter(params, w==100, u==1e-8)
+for(i in unique(df$N)) {
+  
+  df2 <- filter(df, N==i)
+  c <- 1
+  plot_list <- list(length=length(unique(df2$l)))
+  
+  for(j in unique(df2$l)) {
+    p <- ggplot(data=filter(df2, l==j), aes(x=s, y=momentspp))
+    p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+    p <- p + geom_hline(data=filter(df2, l==j), aes(yintercept=pi0), linetype="dashed")
+    p <- p + scale_x_continuous(breaks=pretty_breaks())
+    p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+  
+    if(c==1) {
+      p <- p + labs(title="Hr moments++, rows = uL, cols = r", x="s", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_text(size=16), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    } else if(c==length(unique(df2$l))) {
+      p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16),
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                     legend.text=element_text(size=16), 
+                     legend.position="bottom")
+    } else {
+      p <- p + labs(title=NULL, x="s", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    }
+  
+    plot_list[[c]] <- p
+    c <- c + 1
+  }
+  
+  bgs_plot_3 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+  save_plot(paste("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_A_N_", i, ".pdf", sep=""), bgs_plot_3, base_height=12, base_width=16)
+}
 
 c <- 1
 plot_list <- list(length=length(unique(df$l)))
@@ -1029,7 +1079,7 @@ for(i in unique(df$l)) {
 }
 
 bgs_plot_2 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_2.pdf", bgs_plot_2, base_height=12, base_width=16)
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_mpp_B.pdf", bgs_plot_2, base_height=12, base_width=16)
 
 names(factors_tbl) <- 1:ncol(factors_tbl)
 windows <- bind_cols(params, factors_tbl)
@@ -1038,8 +1088,8 @@ molten_windows$window <- as.numeric(molten_windows$window)
 
 c <- 3
 for(i in unique(params$u)) {
-  p <- ggplot(data=filter(molten_windows, u==i), aes(x=window, y=value, color=as.factor(s)))
-  p <- p + geom_point(size=1) + facet_grid(N~r) + theme_bw()
+  p <- ggplot(data=filter(molten_windows, u==i, w==100), aes(x=window, y=value, color=as.factor(s)))
+  p <- p + geom_point(size=0.5) + facet_grid(N~r) + theme_bw()
   p <- p + scale_x_discrete(breaks=pretty_breaks())
   p <- p + scale_y_continuous(breaks=pretty_breaks())
   p <- p + labs(title=paste("Two-locus Hr BGS windows, mu", i, ", cols = r, rows = N", sep=""), x="Window", y=expression(1-f[j]))
@@ -1054,49 +1104,55 @@ for(i in unique(params$u)) {
 }
 
 # plots of hudson & kaplan 1995
-c <- 1
-plot_list <- list(length=length(unique(df$l)))
-for(i in unique(df$l)) {
-  p <- ggplot(data=filter(df, l==i), aes(x=s, y=hk95, color=as.factor(N)))
-  p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
-  p <- p + geom_hline(data=filter(df, u==i), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
-  p <- p + scale_x_continuous(breaks=pretty_breaks())
-  p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+for(i in unique(df$N)) {
   
-  if(c==1) {
-    p <- p + labs(title="Hr HK95, rows = ul, cols = r", x="s", y="HK95")
-    p <- p + theme(axis.title=element_text(size=16), 
-                   axis.text=element_text(size=12), 
-                   strip.text.x=element_text(size=16), 
-                   axis.title.x=element_blank(),
-                   axis.text.x=element_blank(),
-                   axis.ticks.x=element_blank(),
-                   legend.position="none")
-  } else if(c==length(unique(params$l))) {
-    p <- p + labs(title=NULL, x="s", y=expression(H[r]))
-    p <- p + theme(axis.title=element_text(size=16),
-                   axis.text=element_text(size=12), 
-                   strip.text.x=element_blank(), 
-                   axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                   legend.text=element_text(size=16), 
-                   legend.position="bottom")
-  } else {
-    p <- p + labs(title=NULL, x="s", y=expression(H[r]))
-    p <- p + theme(axis.title=element_text(size=16), 
-                   axis.text=element_text(size=12), 
-                   strip.text.x=element_blank(), 
-                   axis.title.x=element_blank(),
-                   axis.text.x=element_blank(),
-                   axis.ticks.x=element_blank(),
-                   legend.position="none")
+  df2 <- filter(df, N==i)
+  c <- 1
+  plot_list <- list(length=length(unique(df2$l)))
+  
+  for(j in unique(df2$l)) {
+    p <- ggplot(data=filter(df2, l==j), aes(x=s, y=hk95))
+    p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+    p <- p + geom_hline(data=filter(df2, l==j), aes(yintercept=pi0), linetype="dashed")
+    p <- p + scale_x_continuous(breaks=pretty_breaks())
+    p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
+  
+    if(c==1) {
+      p <- p + labs(title="Hr HK95, rows = L, cols = r", x="s", y="HK95")
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_text(size=16), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    } else if(c==length(unique(params$l))) {
+      p <- p + labs(title=NULL, x="s", y="HK95")
+      p <- p + theme(axis.title=element_text(size=16),
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                     legend.text=element_text(size=16), 
+                     legend.position="bottom")
+    } else {
+      p <- p + labs(title=NULL, x="s", y="HK95")
+      p <- p + theme(axis.title=element_text(size=16), 
+                     axis.text=element_text(size=12), 
+                     strip.text.x=element_blank(), 
+                     axis.title.x=element_blank(),
+                     axis.text.x=element_blank(),
+                     axis.ticks.x=element_blank(),
+                     legend.position="none")
+    }
+  
+    plot_list[[c]] <- p
+    c <- c + 1
   }
   
-  plot_list[[c]] <- p
-  c <- c + 1
+  bgs_plot_4 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+  save_plot(paste("selection/single-pop/simple_bgs/bgs_single_neutral_hk95_N_", i, ".pdf", sep=""), bgs_plot_4, base_height=12, base_width=24)
 }
 
-bgs_plot_3 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_hk95_1.pdf", bgs_plot_3, base_height=12, base_width=16)
 
 # compare moments++ and HK95
 for(i in unique(df$N)) {
@@ -1109,7 +1165,7 @@ for(i in unique(df$N)) {
     p <- ggplot(data=filter(df2, l==j), aes(x=s, y=value, shape=method))
     p <- p + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
     p <- p + geom_hline(data=filter(df2, u==j), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
-    p <- p + scale_shape_manual(values=c(0, 1))
+    p <- p + scale_shape_manual(values=c(0, 1, 2))
     p <- p + scale_x_continuous(breaks=pretty_breaks())
     p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
   
@@ -1145,8 +1201,8 @@ for(i in unique(df$N)) {
     c <- c + 1
   }
   
-  bgs_plot_4 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
-  save_plot(paste("selection/single-pop/simple_bgs/bgs_mpp_hk95_N_", i, ".pdf", sep=""), bgs_plot_4, base_height=12, base_width=16)
+  bgs_plot_5 <- plot_grid(plotlist=plot_list, ncol=1, rel_heights=c(1.15, 1, 1, 1, 1.75))
+  save_plot(paste("selection/single-pop/simple_bgs/bgs_mpp_hk95_N_", i, ".pdf", sep=""), bgs_plot_5, base_height=12, base_width=24)
 }
 
 # checking the relationship between the s and the relevant width of BGS (~r)
@@ -1155,10 +1211,11 @@ df3 <- distinct(dplyr::select(filter(molten_windows, w==1, r>0), -window))
 p <- ggplot(data=filter(df3, l==1), aes(x=r, y=value, color=as.factor(s), shape=as.factor(u)))
 p <- p + geom_line() + geom_point(size=3) + facet_wrap(~N, nrow=2) + theme_bw()
 p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
-p <- p + scale_shape_manual(values=c(0, 1))
+p <- p + scale_shape_manual(values=c(0, 1, 2))
+p <- p + scale_color_brewer(palette = "Accent")
 p <- p + scale_x_log10(breaks=unique(df3$r))
 p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
-p <- p + labs(title="Diversity Reduction Factors, L=1", x="r", y=expression(1-f[j]))
+p <- p + labs(title="Diversity Reduction Factors, L=1, W=1", x="r", y=expression(1-f[j]))
 p <- p + theme(axis.title=element_text(size=12),
                axis.text=element_text(size=10),
                axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
@@ -1173,33 +1230,18 @@ p <- ggplot(data=filter(df4, l==1), aes(x=rec, y=value, color=as.factor(s), line
 p <- p + geom_line() + facet_wrap(~N, nrow=2) 
 p <- p + theme(panel.grid.major=element_blank(), panel.grid.minor=element_blank(),
                panel.background=element_blank(), axis.line=element_line(colour="black"))
-p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
+p <- p + geom_vline(data=filter(df4, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
 p <- p + scale_shape_manual(values=c(0, 1))
+p <- p + scale_color_brewer(palette = "Dark2")
 p <- p + scale_x_continuous(breaks=unique(df4$rec))
 p <- p + scale_y_log10(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
-p <- p + labs(title="Diversity Reduction Factors, L=1", x="cum. rec. rate.", y=expression(1-f[j]))
+p <- p + labs(title="Diversity Reduction Factors, L=1, W=100", x="cum. rec. rate.", y=expression(1-f[j]))
 p <- p + theme(axis.title=element_text(size=12),
                axis.text=element_text(size=10),
                axis.text.x=element_blank(),
                axis.ticks.x=element_blank(),
                legend.position="bottom")
 save_plot("selection/single-pop/simple_bgs/s_vs_r_B.pdf", p, base_height=9, base_width=12)
-
-p <- ggplot(data=filter(df4, l==1), aes(x=rec, y=cum_red, color=as.factor(s), linetype=as.factor(u)))
-p <- p + geom_line() + facet_wrap(~N, nrow=2) 
-p <- p + theme(panel.grid.major=element_blank(), panel.grid.minor=element_blank(),
-               panel.background=element_blank(), axis.line=element_line(colour="black"))
-p <- p + geom_vline(data=filter(df3, l==1), aes(xintercept=-s, color=as.factor(s)), linetype="dashed")
-p <- p + scale_shape_manual(values=c(0, 1))
-p <- p + scale_x_continuous(breaks=unique(df4$rec))
-p <- p + scale_y_continuous(breaks=pretty_breaks(), labels=function(x) format(x, scientific=T))
-p <- p + labs(title="Diversity Reduction Factors", x="cum. rec. rate.", y="cum. red.")
-p <- p + theme(axis.title=element_text(size=12),
-               axis.text=element_text(size=10),
-               axis.text.x=element_blank(),
-               axis.ticks.x=element_blank(),
-               legend.position="bottom")
-save_plot("selection/single-pop/simple_bgs/s_vs_r_C.pdf", p, base_height=9, base_width=12)
 ```
 
 ### Building Demes files
